--- a/DIR/css/main.css
+++ b/DIR/css/main.css
@@ -1,3 +1,25 @@
+.menu-btn {
+  position: absolute;
+  z-index: 3;
+  right: 35px;
+  top: 35px;
+  cursor: pointer;
+  transition: all 0.6s ease-out; }
+  .menu-btn .btn-line {
+    width: 28px;
+    height: 4px;
+    margin: 0 0 5px 0;
+    background: whitesmoke;
+    transition: all 0.6s ease-out; }
+  .menu-btn.close {
+    transform: rotate(180deg); }
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px); }
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0; }
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(8px, -7px); }
+
 * {
   box-sizing: border-box; }
 
@@ -7,8 +29,7 @@ body {
   margin: 0;
   font-family: 'Sen', sans-serif;
   line-height: 1.5;
-  font-weight: 800;
-  color: #baf706; }
+  font-weight: 800; }
   body#main-bg {
     background: url(/DIR/img/originalbackground.jpg);
     background-attachment: fixed;
