--- a/DIR/css/main.css
+++ b/DIR/css/main.css
@@ -20,6 +20,79 @@
     .menu-btn.close .btn-line:nth-child(3) {
       transform: rotate(-45deg) translate(8px, -7px); }
 
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 1;
+  visibility: hidden; }
+  .menu.show {
+    visibility: visible; }
+  .menu-branding, .menu-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden; }
+  .menu-nav {
+    margin: 0;
+    padding: 0;
+    background: #090909;
+    list-style: none;
+    transform: translate3d(100%, 0, 0);
+    transition: all 0.6s ease-out;
+    opacity: 1; }
+    .menu-nav.show {
+      transform: translate3d(0, 0, 0); }
+    .menu-nav a {
+      color: whitesmoke; }
+  .menu-branding {
+    background: #161515;
+    transform: translate3d(0, -100%, 0);
+    transition: all 0.6s ease-out;
+    opacity: 0.9; }
+    .menu-branding.show {
+      transform: translate3d(0, 0, 0); }
+    .menu-branding .profile {
+      width: 250px;
+      height: 250px;
+      background: url(/DIR/img/profile.png);
+      border-radius: 50%;
+      border: solid 3px #baf706;
+      object-fit: cover; }
+  .menu .nav-item {
+    transform: translate3d(600px, 0, 0);
+    transition: all 0.6s ease-out; }
+    .menu .nav-item.show {
+      transform: translate3d(0, 0, 0); }
+  .menu .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 40px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    font-weight: 400;
+    color: whitesmoke;
+    text-decoration: none;
+    transition: all 0.6s ease-out; }
+    .menu .nav-link:hover {
+      color: #06b5fa; }
+
+.nav-item:nth-child(1) {
+  transition-delay: 0.1s; }
+
+.nav-item:nth-child(2) {
+  transition-delay: 0.2s; }
+
+.nav-item:nth-child(3) {
+  transition-delay: 0.3s; }
+
+.nav-item:nth-child(4) {
+  transition-delay: 0.4s; }
+
 * {
   box-sizing: border-box; }
 
