--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -37,3 +37,102 @@
 }
 
 }
+
+// Menu list 
+
+.menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    opacity: 1;
+    visibility: hidden;
+
+
+    &.show {
+        visibility: visible;
+    }
+
+&-branding,
+&-nav
+{
+display: flex;
+flex-flow: column wrap;
+align-items: center;
+justify-content: center;
+float: left;
+width: 50%;
+height: 100vh;
+overflow: hidden;
+}
+
+&-nav {
+    margin: 0;
+    padding: 0;
+    background: darken($overlay-color, 5);
+    list-style: none;
+    transform: translate3d(100%, 0, 0);
+    @include easeOut;
+   opacity: 1;
+
+    &.show {
+        transform: translate3d(0, 0, 0);
+    }
+
+
+a {
+    color: whitesmoke;
+}
+}
+&-branding {
+    background: $overlay-color;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+    opacity: 0.9;
+   
+    &.show {
+        transform: translate3d(0, 0, 0);
+    }
+.profile {
+ 
+    width: 250px;
+    height: 250px;
+    background: url(/DIR/img/profile.png);
+    border-radius: 50%;
+    border: solid 3px $icon-color;
+    object-fit: cover;
+
+}
+}
+.nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 40px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    font-weight: 400;
+    color: whitesmoke;
+    text-decoration: none;
+    @include easeOut;
+
+    &:hover {
+        color: $text-secondary;
+    }
+}
+}
+
+//nav items effects
+
+@for $delay from 1 through 4 {
+    .nav-item:nth-child(#{$delay}) {
+        transition-delay: $delay * 0.1s;
+    }
+}
