--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -38,3 +38,29 @@ $tri-font: 'Pacifico', cursive;
         }
     }
 }
+
+// Media Query
+
+@mixin mediaSm {
+@media screen and (max-width: 500px){
+    @content;
+}    
+}
+
+@mixin mediaMd {
+    @media screen and (max-width: 768px){
+        @content;
+    }    
+    }
+
+    @mixin mediaLg {
+        @media screen and (max-width: 769px) and (max-width: 11170px){
+            @content;
+        }    
+        }
+
+        @mixin mediaXl {
+            @media screen and (min-width: 1171px){
+                @content;
+            }    
+            }   
