--- a/DIR/css/main.css
+++ b/DIR/css/main.css
@@ -9,7 +9,7 @@
     width: 28px;
     height: 4px;
     margin: 0 0 5px 0;
-    background: whitesmoke;
+    background: #06b5fa;
     transition: all 0.6s ease-out; }
   .menu-btn.close {
     transform: rotate(180deg); }
@@ -93,45 +93,13 @@
 .nav-item:nth-child(4) {
   transition-delay: 0.4s; }
 
-@media screen and (max-width: 768px) {
-  main {
-    align-items: center;
-    text-align: center; }
-    main .lg-header {
-      line-height: 1;
-      margin-bottom: 1rem; }
-  ul.menu-nav, div.menu-branding {
-    float: none;
-    width: 100%;
-    min-height: 0; }
-    ul.menu-nav.show, div.menu-branding.show {
-      transform: translate3d(0, 0, 0); }
-  .menu-nav {
-    height: 75vh;
-    transform: translate3d(-100%, 0, 0);
-    font-size: 24px; }
-  .menu-branding {
-    height: 25vh;
-    transform: translate3d(100%, 0, 0); }
-    .menu-branding .profile {
-      background: url(/DIR/img/profile-sm.png);
-      width: 150px;
-      height: 150px; } }
-
-@media screen and (max-width: 500px) {
-  main#home h1 {
-    margin-top: 10vh;
-    align-items: center;
-    text-align: center; }
-    main#home h1.lg-header {
-      font-size: 3rem; } }
-
 * {
   box-sizing: border-box; }
 
 body {
   background: #faf2f2;
-  height: 100vh;
+  color: #000;
+  min-height: 100%;
   margin: 0;
   font-family: 'Sen', sans-serif;
   line-height: 1.5;
@@ -151,6 +119,7 @@ body {
 
 h1, h2, h3 {
   margin: 0;
+  margin: 1px;
   font-weight: 500; }
   h1.lg-header, h2.lg-header, h3.lg-header {
     font-size: 6rem;
@@ -177,7 +146,7 @@ header {
 
 main {
   padding: 4rem;
-  height: 100%; }
+  min-height: calc(100vh - 60px); }
   main .icons {
     margin-top: 1rem; }
     main .icons a {
@@ -190,3 +159,110 @@ main {
     overflow: hidden; }
     main#home h1 {
       margin-top: 15vh; }
+
+.about-info {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
+  padding-top: 5px;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  text-align: center;
+  font-weight: 200; }
+  .about-info img {
+    min-width: 350;
+    min-height: 400; }
+
+.bio-image {
+  grid-area: bioimage;
+  margin: auto;
+  border-radius: 50%;
+  border: #06b5fa 3px solid;
+  -moz-box-shadow: inset 0 0 10px #000000;
+  -webkit-box-shadow: inset 0 0 10px #000000;
+  box-shadow: inset 0 0 10px #000000; }
+
+.bio {
+  padding: 0.5rem;
+  background: #f3e0e0;
+  box-shadow: 0 8px 6px -6px black;
+  font-family: 'Muli', sans-serif;
+  grid-area: bio;
+  font-size: 1.5rem; }
+
+.job-1 {
+  grid-area: job1;
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777; }
+
+.job-2 {
+  grid-area: job2;
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777; }
+
+.job-3 {
+  grid-area: job3;
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777; }
+
+.job {
+  background: #f3e0e0;
+  padding: 0.5rem;
+  border-bottom: #baf706 5px solid; }
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: #020202;
+  color: white;
+  height: 60px; }
+
+/*#mainfooter {
+    
+    position: absolute;
+    text-align: center;
+    padding: 1rem;
+    background: #020202;
+    color: white;
+    height: 60px;
+    bottom: 0;
+    width: 100%;
+}*/
+@media screen and (max-width: 768px) {
+  main {
+    align-items: center;
+    text-align: center; }
+    main .lg-header {
+      line-height: 1;
+      margin-bottom: 1rem; }
+  ul.menu-nav, div.menu-branding {
+    float: none;
+    width: 100%;
+    min-height: 0; }
+    ul.menu-nav.show, div.menu-branding.show {
+      transform: translate3d(0, 0, 0); }
+  .menu-nav {
+    height: 75vh;
+    transform: translate3d(-100%, 0, 0);
+    font-size: 24px; }
+  .menu-branding {
+    height: 25vh;
+    transform: translate3d(100%, 0, 0); }
+    .menu-branding .profile {
+      background: url(/DIR/img/profile-sm.png);
+      width: 150px;
+      height: 150px; }
+  .about-info {
+    grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
+    grid-template-columns: 1fr; } }
+
+@media screen and (max-width: 500px) {
+  main#home h1 {
+    margin-top: 10vh;
+    align-items: center;
+    text-align: center; }
+    main#home h1.lg-header {
+      font-size: 3rem; } }
