--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -46,6 +46,15 @@
             height: 150px;
         }
     }
+    .about-info {
+        grid-template-areas: 
+        'bioimage'
+        'bio'
+        'job1'
+        'job2'
+        'job3';
+        grid-template-columns: 1fr;
+    }
 }
 
 @include mediaSm {
