--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import 'config';
 @import 'menu';
-@import 'media';
+
 
 
 
@@ -10,12 +10,12 @@ box-sizing: border-box;
 }
 
 
-
 body {
     
     @include background;
     background: $primary-color;
-    height: 100vh;
+    color: set-text-color($primary-color);
+    min-height: 100%;
     margin: 0;
     font-family: 'Sen', sans-serif;
     line-height: 1.5;
@@ -27,6 +27,7 @@ body {
 // header 
 h1, h2, h3 {
     margin: 0;
+    margin: 1px;
     font-weight: 500;
 
 &.lg-header {
@@ -61,7 +62,7 @@ header {
 
 main {
     padding: 4rem;
-    height: 100%;
+    min-height: calc(100vh - 60px);
     
     .icons {
         margin-top: 1rem;
@@ -83,3 +84,97 @@ main {
     }
 
 }
+
+.about-info {
+
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas: 
+    'bioimage bio bio'
+    'job1 job2 job3';
+    padding-top: 5px;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    text-align: center;
+    font-weight: 200;
+    
+
+    img {
+    min-width: 350;
+    min-height: 400;
+   
+}
+
+}
+
+.bio-image
+{
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $text-secondary 3px solid;
+    -moz-box-shadow:    inset 0 0 10px #000000;
+    -webkit-box-shadow: inset 0 0 10px #000000;
+    box-shadow:         inset 0 0 10px #000000;
+}
+.bio {
+    padding: 0.5rem;
+    background: darken($primary-color, 5);
+    box-shadow: 0 8px 6px -6px black;
+     font-family: 'Muli', sans-serif;
+    grid-area: bio;
+    font-size:  1.5rem;
+}
+
+.job-1 {
+    grid-area: job1;
+    -webkit-box-shadow: 0 10px 6px -6px #777;
+       -moz-box-shadow: 0 10px 6px -6px #777;
+            box-shadow: 0 10px 6px -6px #777;
+}
+.job-2 {
+    grid-area: job2;
+    -webkit-box-shadow: 0 10px 6px -6px #777;
+       -moz-box-shadow: 0 10px 6px -6px #777;
+            box-shadow: 0 10px 6px -6px #777;
+}
+.job-3 {
+    grid-area: job3;
+    -webkit-box-shadow: 0 10px 6px -6px #777;
+       -moz-box-shadow: 0 10px 6px -6px #777;
+            box-shadow: 0 10px 6px -6px #777;
+}
+
+.job {
+    background: darken($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom: $icon-color 5px solid;
+}
+
+#main-footer {
+    
+   
+    text-align: center;
+    padding: 1rem;
+    background: #020202;
+    color: white;
+    height: 60px;
+    //bottom: 0;
+    //width: 100%;
+}
+
+/*#mainfooter {
+    
+    position: absolute;
+    text-align: center;
+    padding: 1rem;
+    background: #020202;
+    color: white;
+    height: 60px;
+    bottom: 0;
+    width: 100%;
+}*/
+
+
+
+@import 'media';
