--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,7 +39,7 @@ h1, h2, h3 {
     font-family: $tri-font;
     margin-bottom: 2rem;
     padding: 0.2rem;
-    background: rgba(darken($text-bgcolor, 0), 0.5);
+    background: rgba(darken(black, 0), 0.5);
     color: $primary-color;
 }
 }
@@ -58,6 +58,10 @@ header {
 .secondary-text {
     color: $text-secondary;
     font-family: $secondary-font;
+}
+
+.Tri-text {
+    color: $overlay-color;
 }
 
 main {
@@ -85,6 +89,7 @@ main {
 
 }
 
+// this is the bio part
 .about-info {
 
     display: grid;
@@ -150,6 +155,50 @@ main {
     padding: 0.5rem;
     border-bottom: $icon-color 5px solid;
 }
+
+
+//My Projects
+
+.Projects {
+    display: grid;
+    grid-gap: 0.8rem;
+    grid-template-columns: repeat(3, 1fr);
+
+    img {
+        width: 100%;
+        border: black solid;
+
+        &:hover {
+            opacity: 0.5;
+            border-color: skyblue;
+            @include easeOut;
+        }
+    }
+}
+//github and project link bottons
+.btn {
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3rem;
+    &:hover {
+        background: yellowgreen;
+        color: #000000;
+    }
+}
+
+.btn-dark {
+@extend .btn;
+background: darken(rgb(70, 61, 61), 50);
+color: white;
+}
+.btn-light {
+    @extend .btn;  
+    background: lighten(rgb(65, 44, 44), 50);
+color: rgb(51, 46, 46);
+}
+
+//footer 2 type of styles 
 
 #main-footer {
     
