--- a/DIR/css/main.css
+++ b/DIR/css/main.css
@@ -216,6 +216,25 @@ main {
   padding: 0.5rem;
   border-bottom: #baf706 5px solid; }
 
+.mycontact {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem; }
+  .mycontact div {
+    font-size: 2rem;
+    border: 3px grey solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    transition: all 0.6s ease-out; }
+    .mycontact div:hover {
+      padding: 0.5rem 1.5rem;
+      background: #94f304;
+      color: #09b3f7; }
+      .mycontact div:hover span {
+        color: #0c0c0c; }
+
 .Projects {
   display: grid;
   grid-gap: 0.8rem;
