--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,7 +5,7 @@ $text-bgcolor: rgba(22, 15, 15, 0.959);
 $text-primary: rgb(3, 0, 0);
 $icon-color: rgb(186, 247, 6);
 $bg-image: true;
-$home-image: url(/DIR/img/originalbackground.jpg);
+$home-image: url(../img/originalbackground.jpg);
 $bg-opacity: 0.6;
 
 $secondary-font: 'Lobster', cursive;
