--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -96,7 +96,7 @@ a {
  
     width: 250px;
     height: 250px;
-    background: url(/DIR/img/profile.png);
+    background: url(../img/profile.png);
     border-radius: 50%;
     border: solid 3px $icon-color;
     object-fit: cover;
