--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -47,9 +47,11 @@
         transform: translate3d(100%, 0, 0);
 
         .profile {
-            background: url(/DIR/img/profile-sm.png);
+            background: url(../img/profile-sm.png) no-repeat;
+            object-fit: cover;
             width: 150px;
             height: 150px;
+
         }
     }
     .about-info {
