--- a/css/main.css
+++ b/css/main.css
@@ -311,7 +311,8 @@ main {
     height: 25vh;
     transform: translate3d(100%, 0, 0); }
     .menu-branding .profile {
-      background: url(/DIR/img/profile-sm.png);
+      background: url(../img/profile-sm.png) no-repeat;
+      object-fit: cover;
       width: 150px;
       height: 150px; }
   .about-info {
