--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,18 @@ main {
     text-align: center; }
     main#home h1.lg-header {
       font-size: 3rem; }
+  main#work h1 {
+    margin-top: 10vh;
+    align-items: center;
+    text-align: center; }
+    main#work h1.lg-header {
+      font-size: 3rem; }
+  main#contacts h1 {
+    margin-top: 10vh;
+    align-items: center;
+    text-align: center; }
+    main#contacts h1.lg-header {
+      font-size: 3rem; }
   .about-info {
     grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
     grid-template-columns: 1fr; }
@@ -338,4 +350,6 @@ main {
     main#about h1.lg-header {
       font-size: 2rem; }
   .Projects {
-    grid-template-columns: 1fr; } }
+    grid-template-columns: 1fr; }
+  .mycontacts {
+    font-size: small; } }
