--- a/DIR/css/main.css
+++ b/DIR/css/main.css
@@ -241,6 +241,7 @@ main {
   grid-template-columns: repeat(3, 1fr); }
   .Projects img {
     width: 100%;
+    height: 170px;
     border: black solid; }
     .Projects img:hover {
       opacity: 0.5;
