--- a/scss/main.scss
+++ b/scss/main.scss
@@ -204,6 +204,22 @@ main {
             @include easeOut;
         }
     }
+    .btnn {
+        display: block;
+        background: lighten(rgb(107, 159, 236), 50);
+        padding: 0.5rem 5rem;
+        border: 0;
+        margin-bottom: 0.3rem;
+        font-family: $secondary-font;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 0.3rem;
+        &:hover {
+            background: yellowgreen;
+            color: #000000;
+        }
+    }
 }
 //github and project link bottons
 .btn {
